fixed thin scrollbar not appear within pages

--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,4 +1,8 @@
-:root{
+* {
+  scrollbar-width: thin !important;
+}
+
+:root {
   scrollbar-color: #aaaaaa #343434 !important;
-  scrollbar-width: thin;
+  scrollbar-width: thin !important;
 }
